Explicitly set bounds for transformation in GetTransforms.

--- a/.gitignore
+++ b/.gitignore
@@ -115,3 +115,5 @@ csharp-new/liblas_swig.sdf
 # swig-generated files
 csharp-new/liblas_swig_cs/*.cs
 csharp-new/liblas_swig_cpp/liblas_wrap.cpp
+makefiles
+
